Fixed layout issues

--- a/dev/style/layouts.scss
+++ b/dev/style/layouts.scss
@@ -1,3 +1,5 @@
+@import './colours';
+
 body {
   font-family: 'Roboto', Helvetica, serif;
 }
@@ -12,6 +14,8 @@ a {
   &:active,
   &:focus,
   &:visited {
+    color: $colour-black;
+    outline: none;
     text-decoration: none;
   }
 }
